<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_material_light"
    android:gravity="center">

    <RelativeLayout
        android:id="@+id/rlTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <RelativeLayout
            android:id="@+id/rlMainContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTitle"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tvSelectCategory"
                style="@style/informationSubtitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/marginBig"
                android:text="@string/app_category_dialog_title" />

            <LinearLayout
                android:id="@+id/llFirstLineBtnCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvSelectCategory"
                android:layout_gravity="center"
                android:layout_margin="@dimen/marginStandard"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true">

            </LinearLayout>

            <ImageView
                android:id="@+id/ivSeparate"
                android:layout_below="@+id/llFirstLineBtnCategory"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_centerHorizontal="true"/>

            <!--<View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/llFirstLineBtnCategory"
                android:background="@color/kurio_green"
                android:layout_marginStart="@dimen/marginBig"
                android:layout_marginEnd="@dimen/marginBig" />-->

            <TextView
                android:id="@+id/tvChildSelection"
                style="@style/informationSubtitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivSeparate"
                android:layout_gravity="center_horizontal"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/marginBig"
                android:text="@string/app_category_select_child_to_allow" />

            <LinearLayout
                android:id="@+id/llChildProfilesFirstLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvChildSelection"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llChildProfilesSecondLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llChildProfilesFirstLine"
                android:layout_centerInParent="true"
                android:orientation="horizontal"></LinearLayout>

        </RelativeLayout>

        <ImageView
            android:id="@+id/ivAppCategory"
            android:layout_width="@dimen/profileApplicationControlImageWidth"
            android:layout_height="@dimen/profileApplicationControlImageHeight"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/marginBig"/>

        <TextView
            android:id="@+id/tvTitle"
            style="@style/title_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/ivAppCategory"
            android:layout_marginStart="@dimen/marginStandard"
            android:text="title" />


    </RelativeLayout>

    <TextView
        android:id="@+id/warning_browser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/warning_browser_app"
        android:layout_below="@+id/rlTitle"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"/>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_below="@+id/warning_browser"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/positive_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            style="@style/dialog_button"/>

        <Button
            android:id="@+id/negative_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel"
            style="@style/dialog_button"/>
    </LinearLayout>
</RelativeLayout>